test/libyul/yulSyntaxTests/hex_expression.yul
{
    pop(hex"2233")
}
// ----
// ParserError 1856: (10-19): Literal or identifier expected.
